# MetObs_toolkit

./: ..gitignore.swp  .buildinfo  .coverage  .deploy_to_testPiPY.sh.swp  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LCZ_map.html  LICENSE  MetObs_documentation_flat.html  README.md  argument_inconsistencies.md  csmask_verif.ipynb  data_template_example.xlsx  dataset_20221004_20221011.csv  deleteme.html  dev_environment.yml  environment.yml  era5_temp_at_2006-11-18 20:15:00.html  genindex.html  index.html  install_geo_software_backend_for_linux.sh  intro.html  noxfile.py  objects.inv  pyproject.toml  pytest.ini  requirements.html  requirements.txt  rtdtest.py  search.html  searchindex.js  setup.cfg  specific_topics.html  summerschool_modeldata_metadata.csv  testfile.csv
.doctrees/: MetObs_documentation_flat.doctree  environment.pickle  index.doctree  intro.doctree  requirements.doctree  specific_topics.doctree
.doctrees/examples/: Untitled.doctree  analysis_example.doctree  doc_example.doctree  filling_example.doctree  gee_example.doctree  index.doctree  qc_example.doctree  using_obstypes.doctree
.doctrees/notebook_references/: log_example.doctree  new_obstypes_doc.doctree  template_doc.doctree
.doctrees/paper/: index.doctree  paper_figures.doctree
.doctrees/reference/: analysis.doctree  dataset.doctree  gap.doctree  geemodeldata.doctree  modeldata.doctree  obstype.doctree  special_functions.doctree  station.doctree  template.doctree
.doctrees/topics/: contributing_link.doctree  create_obstypes.doctree  gee_authentication.doctree  gui.doctree  irregular_timestamp_handling.doctree  irregular_timestamps.doctree  template_doc.doctree  template_mapping.doctree
.github/: copilot-instructions.md
.github/instructions/: code_style_instructions.md  (+2 more)
GUI/: data_func.py  main.py  path_handler.py  templ_build.ui  template_func.py  tlk_scripts.py
_modules/: index.html
_sources/: MetObs_documentation_flat.rst.txt  index.rst.txt  requirements.txt
deploiment/: build_and_test.sh  build_documentation.sh  build_package.sh  copilot_prompts.txt  deploy_to_online.sh  develop_pipeline.sh  run_doctests.sh  run_examples_as_test.sh  run_tests.sh  update_version.sh
deployment/: copilot_prompts.txt  develop_pipeline.sh  test_gee_auth.py
development/: Untitled.ipynb  develop_script.py  develop_script1.py  gee_worldcover_figure.html  launch_gui.ipynb  paper_figures.py  qc_settings.json
docs/: MetObs_documentation.rst  MetObs_documentation_flat.rst  MetObs_documentation_full.rst  MetObs_for_developers.rst  build_doc  conf.py  devdocumentation.rst  doc_environment.yml  examples.rst  gap_fill_constraints.md  gaps.rst  gee_authentication.rst  gui.rst  index.rst  intro.rst  settings.rst  special_topics.rst  specific_topics.rst  template_mapping.rst  typehint_only_imports.md  usrdocumentation.rst
examples/: Gap_filling_excercise_03.ipynb  Introduction_01.ipynb  Quality_control_excercise_02.ipynb  Untitled.html  analysis_example.html  doc_example.html  filling_example.html  filling_example.ipynb  filling_example.py  gee_authentication.py  gee_example.html  index.html  introduction_example.py  lcz_example.py  metadata_file.csv  plotting_example.py  qc_example.html  qualitycontrol_example.py  qualitycontrol_example_fix_me.pytest  reading_from_db_example.py  templates_example.py  using_obstypes.html  using_obstypes.ipynb
exaples/: introduction_example.py  plotting_example.py  vlinder_from_csv.py
fairness_demo_exercises/: Gap_filling_excercise_03.ipynb  Introduction_01.ipynb  Quality_control_excercise_02.ipynb
metobs_toolkit/: Newdataset.py  __init__.py  analysis.py  convertors.py  data_import.py  dataparser.py  dataset.py  dataset_core.py  dataset_gap_handling.py  dataset_gapfill.py  dataset_modeldata.py  dataset_qc.py  dataset_qc_handling.py  dataset_settings_updater.py  dataset_visuals.py  datasetbase.py  df_helpers.py  doctest_fmt.py  filereaders.py  gap.py  gap_filling.py  gee_api.py  gee_extractor.py  geedatasetmanagers.py  geometry_functions.py  gui_launcher.py  interactive_worldcover_plot.html  landcover_functions.py  logging.py  loggingmodule.py  metadataparser.py  miscellaneous.py  missingobs.py  modeldata.py  modeltimeseries.py  modelxrdataset.py  new_analysis.py  newgap.py  obstype_modeldata.py  obstypes.py  (+16 more)
notebook_references/: log_example.html  log_example.ipynb  new_obstypes_doc.html  template_doc.html
paper/: index.html  paper.bib  paper.md  paper_figures.html
physiograpy/: lcz_filter_v1.tif
reference/: analysis.html  dataset.html  gap.html  geemodeldata.html  modeldata.html  obstype.html  special_functions.html  station.html  template.html
reports/: analysis_example.html  filling_example.html  gee_example.html  introduction.html  log_example.html  qc_example.html
static_data/: .~lock.vlinder_metadata.csv#  data.csv  vlinder_metadata.csv  vlinder_metadata.xlsx
tests/: IO_test.py  Setup_test.py  extreme_test.py  package_import_test.py  saved_modeldata.pkl  solutionclass.py  test_add.py  test_analysis.py  test_gee.py  test_gf.py  test_gf_limits.py  test_importing.py  test_logging.py  test_modeldata.py  test_modeldatadf_bugfix.py  test_module_sanity.py  test_obstypes.py  test_plotting.py  test_qc.py  test_settings.py  test_timestampmatcher.py  test_to_netcdf.py  test_to_xr.py  test_verification.py
toolkit_tests/: gee_service_authenticator.py  solutionclass.py  test_add.py  test_analysis.py  test_gee.py  test_gf.py  test_importing.py  test_obstypes.py  test_plotting.py  test_qc.py  test_to_xr.py
topics/: contributing_link.html  create_obstypes.html  gee_authentication.html  gui.html  irregular_timestamp_handling.html  irregular_timestamps.html  template_doc.html  template_mapping.html
vlinder_toolkit/: __init__.py  analysis.py  convertors.py  data_import.py  dataset.py  df_helpers.py  gap.py  gap_filling.py  geometry_functions.py  landcover_functions.py  missingobs.py  modeldata.py  plotting_functions.py  printing.py  qc_checks.py  qc_statistics.py  settings.py  station.py  statistics.py  writing_files.py
(+2071 files in other folders)
