[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
description = "A Meteorological observations toolkit for scientists"
documentation = "https://metobs-toolkit.readthedocs.io/en/latest/index.html"
keywords = ["meteorology", "observations", "urban climate"]
license = "LICENSE"
maintainers = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
name = "MetObs-toolkit"
packages = [{include = "metobs_toolkit"}]
readme = "README.md"
version = "0.3.1a"

[tool.poetry.dependencies]
cartopy = "^0.23.0"
# cartopy = '^0.21.1'
earthengine-api = "^1.0.0"
geemap = "^0.34.1"
geopandas = "^1.0.1"
geos = "^0.2.3"
# geos = '^3.7'
mapclassify = "^2.8.0"
# numpy = "^1.17.3" #in pandas
matplotlib = "^3.9.2"
numpy = "^1"
pandas = "^2"
# pygeos = "^0.14"
# pyproj = "~3.4"
python = "^3.9"
shapely = "^2.0.6"

[tool.poetry.group.dev.dependencies]
jedi = "^0.19"
# To run poetry tests
poetry = "^1.8.3"
poetry-plugin-export = "^1.8.0"
pre-commit = "^3.8.0"

[tool.poetry.group.documentation.dependencies]
ipykernel = "^6.29.5"
myst_parser = "^3"
nbsphinx = "^0.9.5"
pandoc = "^2.4"  # Check on PyPi (not in local conda env) + with system wide install
# sphinx-rtd-theme = '^1.3.0'
pydata-sphinx-theme = "^0.15.4"
# Group of dep packages for building the documentation
sphinx = ">=7"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.titan.dependencies]
# titanlib requires C-compilers, which are not by default present on windows.
# Make a seperate group for titan
titanlib = "^0.3.3"
