[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
name = "MetObs-toolkit"
version = "0.4.0a"

[tool.poetry]
authors = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
description = "A Meteorological observations toolkit for scientists"
documentation = "https://metobs-toolkit.readthedocs.io/en/latest/index.html"
keywords = ["meteorology", "observations", "urban climate"]
license = "LICENSE"
maintainers = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
packages = [{include = "metobs_toolkit"}]
readme = "README.md"

[tool.poetry.dependencies]
cartopy = "^0.23"
earthengine-api = "^1.1.3"
# folium = "^0.19.5"  # needed for geemap
geemap = "^0.35.3"
geopandas = "^1.0.1"
geos = "^0.2.3"
mapclassify = "^2.8.1"
# numpy = "^1.17.3" #in pandas
matplotlib = "^3.9.2"
numpy = "^1"
pandas = "^2"
pint = "^0.24.4"
python = "^3.9"
setuptools = "^78.1.0"
shapely = "^2.0.6"

[tool.poetry.group.dev.dependencies]
jedi = "^0.19"
nbconvert = "^7.16.6"
# nbstripout = "^0.8.1"
# To run poetry tests
poetry = "^2"
pre-commit = "^4.0.1"
pretty-errors = "^1.2.25"
pytest = "^8.3.5"
pytest-mpl = "^0.17.0"

[tool.poetry.group.documentation.dependencies]
ipykernel = "^6.29.5"
myst_parser = "^3"
nbsphinx = "^0.9.5"
pandoc = "^2.4"  # Check on PyPi (not in local conda env) + with system wide install
poetry = "^2"
# sphinx-rtd-theme = '^1.3.0'
pydata-sphinx-theme = "^0.15.4"
# Group of dep packages for building the documentation
sphinx = ">=7"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^3.0.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"
