[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
name = "MetObs-toolkit"
version = "0.4.6"
license = "LICENSE"
authors = [{name = "Thomas Vergauwen", email = "thomas.vergauwen@meteo.be"}]
description = "A Meteorological observations toolkit for scientists"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
documentation = "https://metobs-toolkit.readthedocs.io/en/latest/index.html"
keywords = ["meteorology", "observations", "urban climate"]
packages = [{include = "metobs_toolkit"}]
requires-python = ">=3.10,<4.0"


dependencies=[
  "cartopy>=0.23",
  "earthengine-api>=1.1.3",
  # "folium>=0.19.5",  # needed for geemap
  "geemap>=0.35.3",
  "geopandas>=1.0.1",
  "mapclassify>=2.8.1",
  # "numpy>=1.17.3", #in pandas
  "matplotlib>=3.9.2",
  "numpy>=1",
  "pandas>=2",
  "pint>=0.24.4",
  "setuptools>=78.1.0",
  "shapely>=2.0.6",
  "xarray>=2022.3.0",
  "pyarrow (>=21.0.0,<22.0.0)",
  "netcdf4 (>=1.7.2,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
jedi = "^0.19"
nbconvert = "^7.16.6"
# nbstripout = "^0.8.1"
# To run poetry tests
poetry = "^2"
pre-commit = "^4.0.1"
pretty-errors = "^1.2.25"
pytest = "^8.3.5"
pytest-mpl = "^0.17.0"
pytest-cov = "^6.1.1"
nbval = "^0.11.0"
black = "^25.1.0"
jupyter = "^1.1.1"

[tool.poetry.group.documentation.dependencies]
ipykernel = "^6.29.5"
myst_parser = "^3"
nbsphinx = "^0.9.5"
pandoc = "^2.4"  # Check on PyPi (not in local conda env) + with system wide install
poetry = "^2"
# sphinx-rtd-theme = '^1.3.0'
pydata-sphinx-theme = "^0.15.4"
# Group of dep packages for building the documentation
sphinx = ">=7"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^3.0.1"

#Required by some versions of poetry? (not needed in v2.1.3)
# [tool.poetry.requires-plugins]
# poetry-plugin-export = ">=1.9"


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
  | .*test_*.py
)
'''